[package]
name = "bergbuch"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1.0"
rustyline = "14.0.0"

[profile.profiler]
inherits = "release"
debug = true

[features]
compliant = []
