[package]
name = "bergbuch"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.4.2"
num-traits = "0.2.18"
rustc-hash = "1.1.0"
rustyline = { version = "14.0.0", features = ["derive"] }

[profile.profiler]
inherits = "release"
debug = true

[features]
compliant = []
